# mdxlroptimizer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml  rust.yml
src/: macros.rs  main.rs  model.rs  optimizer.rs  traits.rs
