[package]
name = "mdxlroptimizer"
version = "0.1.0"
authors = ["Nebula Venus <6595784+Nebulavenus@users.noreply.github.com>"]
edition = "2018"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
log = "0.4.8"
flexi_logger = { version = "0.14.5", default_features = true }
clap = "2.33.0"
nebula-mdx = { git = "https://github.com/Nebulavenus/nebula-mdx.git" }