[package]
name = "mdxlroptimizer"
version = "0.1.0"
authors = ["Nebula Venus (Github)"]
edition = "2018"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
log = "0.4.8"
flexi_logger = { version = "0.14.5", default_features = true }
structopt = "0.3.7"
nebula-mdx = { git = "https://github.com/Nebulavenus/nebula-mdx.git", tag = "0.1.0" }